<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JsonToGson</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn1">输入歌曲相关信息</string>
    <string name="btn2">确定</string>
    <string name="add">添加</string>
    <string name="download">下载</string>
    <string name="share">分享</string>
    <string name="play">播放</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<string name="sha">添加view</string>
	     
</resources>