<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="6"
      android:id="@+id/extraView"
    >
    <TextView 
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@android:drawable/ic_menu_add"
        android:text="@string/add"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        />
    
    <TextView 
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@android:drawable/ic_menu_upload"
        android:text="@string/download"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        />
    
    <TextView 
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@android:drawable/ic_menu_share"
        android:text="@string/share"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        />
   
  <TextView 
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@android:drawable/ic_media_play"
        android:text="@string/play"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        />
   
    
    

</LinearLayout>
