<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/extname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/m4afilesize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/filesize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/bitrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/isnew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/albumname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/singername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/hash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/app_name" />

    <LinearLayout
        android:id="@+id/extraView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6"
        android:visibility="gone" 
        android:background="@android:color/darker_gray">

        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_menu_add"
            android:gravity="center_horizontal"
            android:text="@string/add" />

        <TextView
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_menu_upload"
            android:gravity="center_horizontal"
            android:text="@string/download" />

        <TextView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_menu_share"
            android:gravity="center_horizontal"
            android:text="@string/share" />

        <TextView
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@android:drawable/ic_media_play"
            android:gravity="center_horizontal"
            android:text="@string/play" />
        
        
    </LinearLayout>

</LinearLayout>